[package]
name = "log"
version = "0.1.0"
authors = ["Ji <jiji@wlblock.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
log4rs = "0.10.0"

lettre = "0.9"
lettre_email = "0.9"
mime = "0.3.13"
time = "0.2.26"